# RemiliaBot

./: README.md  config.py  data.json  pyproject.toml  requirements.txt  run.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: python-publish.yml
remilia/: __init__.py  __main__.py  config.py  log.py
remilia/plugins/Gua64/: __init__.py
remilia/plugins/block/: __init__.py
remilia/plugins/chat/: utils.py
remilia/plugins/cmd/: sys_cmd.py
remilia/plugins/code_runner/: __init__.py  data_source.py
remilia/plugins/setu/: __init__.py
remilia/plugins/status/: __init__.py
remilia/src/: __init__.py
remilia/src/plugins/block/: __init__.py
remilia/src/plugins/chat/: __init__.py  gpt.py  utils.py
remilia/src/plugins/cmd/: __init__.py  sys_cmd.py
remilia/src/plugins/pix/: __init__.py  utils.py
remilia/src/plugins/setu/: __init__.py  acggov.py  download.py  lolicon.py  utils.py
remilia/src/plugins/start/: __init__.py
remilia/src/plugins/status/: __init__.py  data_source.py  utils.py
src/: __init__.py  config.py
src/plugins/Gua64/: __init__.py
src/plugins/block/: __init__.py
src/plugins/chat/: __init__.py  utils.py
src/plugins/chatGPT/: __init__.py  down.sh  revChatGPT.py  utils.py
src/plugins/cmd/: __init__.py  sys_cmd.py
src/plugins/code_runner/: __init__.py  data_source.py
src/plugins/pix/: __init__.py  utils.py
src/plugins/setu/: __init__.py  rdsetu.py  utils.py
src/plugins/start/: __init__.py
src/plugins/status/: __init__.py  utils.py
src/utils/: log.py
